stories/Components/Forms/Textpanel/form-types.scss
@import '../../../assets/scss/variables';
@import '../../../assets/scss/mixins';

.form-wrapper {
  .text-panel {
    .button {
      margin-top: $spacing-24;
    }
  }

  h2 {
    margin-bottom: $spacing-40;
  }

  .input-group {
    .input__controls {
      border-radius: 0;
      margin: 0.9375rem 0;
    }
  }

  .form-photo {
    img {
      height: 100%;
      object-fit: cover;
    }

    .stacked-form {
      height: inherit;

      h2 {
        margin-bottom: $spacing-16;
      }

      p {
        margin-bottom: $spacing-48;

        @include devicebreak(small) {
          margin-bottom: $spacing-32;
        }
      }

      .button {
        margin-top: $spacing-48;

        @include devicebreak(small) {
          margin-top: $spacing-32;
        }
      }
    }
  }

  .form-bg {
    background: $color-gray-100;
    box-sizing: border-box;
    padding: $spacing-96 0;

    @include devicebreak(small) {
      padding: $spacing-48 $spacing-24;
    }
  }

  .button {
    @include devicebreak(small) {
      width: 100%;
    }
  }

  .wide-form {
    h2 {
      margin-bottom: $spacing-24;
      @include devicebreak(small) {
        margin-bottom: $spacing-08;
      }
    }

    .input-group {
      .input__controls {
        margin: $spacing-12 0;
      }
    }

    .button {
      margin-top: $spacing-48;

      @include devicebreak(small) {
        margin-top: $spacing-32;
      }
    }
  }

  .stacked-form {
    h2 {
      margin-bottom: $spacing-16;
    }

    p {
      margin-bottom: $spacing-48;
      @include devicebreak(small) {
        margin-bottom: $spacing-32;
      }
    }

    .input-group {
      .input__controls {
        margin: $spacing-12 0;
      }
    }

    .button {
      margin-top: $spacing-48;

      @include devicebreak(small) {
        margin-top: $spacing-32;
      }
    }
  }
}

[dir='rtl'] {
  @media print, screen and (min-width: 64em) {
    .text-panel >:nth-child(1) {
      margin-left: 0.75rem;
      margin-right: calc(8.33333% + 1.5rem / 2);
    }
  }
}

